--- a/client/src/index.html
+++ b/client/src/index.html
@@ -5,15 +5,21 @@
   <title>Client</title>
   <base href="/">
   <!-- Compiled and minified CSS -->
-  <!--link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
 
   <!-- Compiled and minified JavaScript -->
-  <!--script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
+  <link rel="stylesheet" href="animate.css">
           
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root>Loadinggg...</app-root>
+  <app-root>
+    <centre>
+      <br><br><br><br><br><br><br><br><br><br><br><br>
+      <img src="https://media.giphy.com/media/jAYUbVXgESSti/giphy.gif">
+    </centre>
+  </app-root>
 </body>
 </html>
